kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80       # Service exposed to cluster
      targetPort: 5000 # Flask app container
  type: ClusterIP   # only inside cluster
